<resources>

    <string name="API_KEY">AIzaSyBZNYEUwq0cg9s6jxKtKWwENI1wyvF977k</string>
    <string name="APP_VERSION">Version 1.20.01 Build 06012020</string>
    <string name="app_name">LBS Volleyball</string>

    <string name="spieltag">Spieltag</string>
    <string name="spieltag_anlegen">Spieltag anlegen</string>
    <string name="spielerverwaltung">Spielerverwaltung</string>
    <string name="spieler">Spieler</string>
    <string name="kalender">Kalender</string>
    <string name="dashboard">Dashboard</string>
    <string name="trainingsortverwaltung">Trainingsortverwaltung</string>
    <string name="trainingsverwaltung">Trainingsverwaltung</string>
    <string name="trainingsort">Trainingsorte</string>
    <string name="trainingsuebersicht">Trainingsübersicht</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="export">Export</string>
    <string name="import_nav">Import</string>

    <string name="editText_hint_name">Name</string>
    <string name="editText_hint_vname">Vorname</string>
    <string name="editText_hint_bdate">Geburtstag</string>
    <string name="editText_hint_strasse">Straße</string>
    <string name="editText_hint_plz">Postleitzahl</string>
    <string name="editText_hint_ort">Ort</string>
    <string name="editText_mail">E-Mail</string>
    <string name="editText_hint_platzkosten">20,00</string>
    <string name="textView_platzkosten">Wieviel wurde bezahlt?</string>
    <string name="textView_platzkosten_2">Platzkosten</string>
    <string name="textView_tunierkosten">Tunierkosten</string>
    <string name="textView_spieltag">Spieltag</string>
    <string name="textView_Ort">Ort</string>
    <string name="textView_Teilnehmer">Teilnehmer</string>
    <string name="textView_spielerverwaltung">Spielerverwaltung</string>
    <string name="textView_wer_gespielt">Wer hat gespielt?</string>
    <string name="textView_wo_gespielt">Wo wurde gespielt?</string>
    <string name="textView_betrag_pro_spieler">Betrag je Spieler</string>
    <string name="textView_buchung_betrag">Betrag</string>
    <string name="textView_buchung_datum">Datum</string>
    <string name="textView_buchung_typ">Typ</string>
    <string name="textView_kto_saldo_neu">Kontosaldo</string>
    <string name="textView_kto_saldo_aktuell">Aktueller Kontostand:</string>
    <string name="textView_teilnahmen">Trainingsteilnahmen:</string>
    <string name="textView_besuche">Trainings an diesem Ort:</string>
    <string name="textView_keine_spieler">Es sind noch keine Spieler eingerichtet.</string>
    <string name="textView_auswahl">Auswahl:</string>


    <string name="sort_vorname">Vorname</string>
    <string name="sort_nachmane">Nachname</string>
    <string name="sort_teilnahmen">Teilnahmen</string>
    <string name="export_spieler">Spieler exportieren</string>
    <string name="import_spieler">Spieler importieren</string>
    <string name="export_buchung">Buchungen exportieren</string>
    <string name="import_buchung">Buchungen importieren</string>
    <string name="export_training">Trainings exportieren</string>
    <string name="import_training">Trainings importieren</string>
    <string name="export_trainingsort">Trainingsorte exportieren</string>
    <string name="import_trainingsort">Trainingsorte importieren</string>

    <string name="tab_grunddaten">Grunddaten</string>
    <string name="tab_kontodaten">Kontoübersicht</string>
    <string name="tab_training">Training</string>
    <string name="tab_tunier">Tunier</string>

    <string name="textView_foto">Foto:</string>
    <string name="switch_auszahlung">Auszahlung</string>
    <string name="switch_kostenlos">Kostenlos</string>


    <string name="editText_buchungsbetrag">Buchung anlegen</string>
    <string name="editText_EUR">EUR</string>
    <string name="button_kontouebersicht">Kontoübersicht</string>
    <string name="button_buchung_hinzufügen">Spieltag buchen!</string>
    <string name="button_tunier_buchen">Tunier buchen!</string>
    <string name="button_buchen">Buchen!</string>
    <string name="button_foto">Foto auswählen</string>
    <string name="button_spieler_anlegen">Spieler anlegen</string>
    <string name="button_spieler_aendern">Spieler ändern</string>
    <string name="button_speichern">Speichern</string>
    <string name="button_spieler_loeschen">Spieler löschen</string>
    <string name="button_trainingsort_anlegen">Trainingsort anlegen</string>
    <string name="button_trainingsort_aendern">Trainingsort ändern</string>
    <string name="button_trainingsort_loeschen">Trainingsort löschen</string>

    <string name="betrag_0">0,00</string>

    <string name="button_add_player">+</string>

    <string name="editText_errorMessage_empty">Das Feld darf nicht leer sein.</string>
    <string name="editText_errorMessage_bdate">Das Feld muss ein Datum im Format DD.MM.JJJJ enthalten.</string>
    <string name="editText_errorMessage_bdate2">Der Tag darf nicht >31, der Monat nicht >12 sein.</string>

    <string name="editText_errorMessageMail">Die Mail-Adresse muss ein @ sowie einen Punkt enthalten. </string>


    <string name="cab_delete">Einträge löschen</string>

    <string name="cab_change">Eintrag ändern</string>
    <string name="cab_checked_string">ausgewählt</string>

    <string name="dialog_title">Daten ändern</string>
    <string name="dialog_title_name">Name:</string>
    <string name="dialog_title_vname">Vorname:</string>
    <string name="dialog_title_bdate">Geburtstag:</string>
    <string name="dialog_title_strasse">Straße/Nr.:</string>
    <string name="dialog_title_plz">PLZ:</string>
    <string name="dialog_title_ort">Ort:</string>

    <string name="dialog_button_positive">Ändern</string>
    <string name="dialog_button_negative">Abbrechen</string>


    <string name="dialog_button_positive_add">Anlegen</string>

    <string name="pick_image_intent_text">Bild auswählen</string>
    <string name="eine_weitere_Buchungen">Es ist %d weitere Buchung vorhanden"</string>
    <string name="weitere_Buchungen">Es sind %d weitere Buchungen vorhanden"</string>
    <string name="keine_weiteren_Buchungen">Es sind keine weiteren Buchungen vorhanden"</string>
    <string name="dialogMessage_Ausgleichen">%s %s hat einen Kontostand von %s€. Bitte Konto vorher ausgleichen.</string>
    <string name="dialogMessage_wirklichLoeschen">Soll %s %s wirklich gelöscht werden? Diese Aktion kann nicht widerrufen werden.</string>
    <string name="dialogMessage_wirklichLoeschenTraining">Soll das Training wirklich gelöscht werden? Diese Aktion kann nicht widerrufen werden.</string>
    <string name="dialogMessage_to_wirklichLoeschen">Soll %s wirklich gelöscht werden? Diese Aktion kann nicht widerrufen werden.</string>
    <string name="dialogMessage_BuchenBeiLoeschen">%s %s hat einen Kontostand von %s€. Soll der Betrag ausgezahlt oder auf das Teamkonto überwiesen werden?</string>
    <string name="hinzufuegen">hinzufügen</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
    <string name="max_mustermann">Max Mustermann</string>
    <string name="max">Max</string>
    <string name="mustermann">Mustermann</string>
    <string name="funfor4_beachvolleyball">funfor4 Beachvolleyball</string>
    <string name="georg_hermann_allee_105_14469_potsdam">Georg-Hermann-Allee 105, 14469 Potsdam</string>
    <string name="buga_potsdam">BUGA Potsdam</string>
    <string name="_24_99_eur">24,99 EUR</string>
    <string name="volleyball_app">Volleyball-App</string>
    <string name="teammitglieder">Teammitglieder</string>
    <string name="_15">15</string>
    <string name="teamkonto">Teamkonto</string>
    <string name="auswertungen">Statistik</string>
    <string name="_37_50">37,50</string>
    <string name="_01_01_2001">01.01.2001</string>
    <string name="anzahl">Anzahl:</string>
    <string name="trainingsort_list_view">Trainingsort:</string>
    <string name="teilnehmer">Teilnehmer:</string>
    <string name="schlie_en">Schließen</string>
    <string name="karte">Karte</string>
    <string name="wann_wurde_gespielt">Wann wurde gespielt?</string>
    <string name="heute">Heute</string>
    <string name="button_training_hinzufuegen">Training hinzufügen!</string>
    <string name="button_spielort_anlegen">Spielort anlegen</string>
    <string name="spieler_mit_den_meisten_teilnahmen">Top 3 Spieler mit den meisten Teilnahmen:</string>
    <string name="top_3_trainingsorte">Top 3 Spielorte mit den meisten Besuchen:</string>
    <string name="spieleranzahl_je_training">Ø Spieleranzahl je Training:</string>
    <string name="_10">10</string>
    <string name="anzahl_der_spieler">Anzahl der Spieler:</string>
    <string name="anzahl_der_trainings">Anzahl der Trainings:</string>
    <string name="anzahl_der_trainingsorte">Anzahl der Trainingsorte:</string>
    <string name="manuell">= Manuell</string>
    <string name="training">= Training</string>
    <string name="tunier">= Tunier</string>
    <string name="spieler_geloescht">= Spieler gelöscht</string>
    <string name="platzkosten">Platzkosten:</string>
    <string name="training_loeschen">Training löschen</string>
    <string name="rund_0">~0,01</string>

</resources>