<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/datum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:singleLine="true"
        android:text="@string/textView_buchung_datum" />

    <TextView
        android:id="@+id/betrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:singleLine="true"
        android:text="@string/textView_buchung_betrag" />

    <TextView
        android:id="@+id/saldo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="#AE1732"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:singleLine="true"
        android:text="@string/textView_kto_saldo_neu"
        android:textAlignment="center" />

</LinearLayout>
