<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_teilnehmer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        map:cardCornerRadius="6dp"
        map:layout_constraintBottom_toTopOf="@+id/training_dialog_loeschen_button"
        map:layout_constraintEnd_toStartOf="@+id/cardView2"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|top"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/textView_Teilnehmer"
                android:textSize="14sp" />

            <ListView
                android:id="@+id/fragment_trainingsuebersicht_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="true">

            </ListView>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginEnd="16dp"
        map:cardCornerRadius="6dp"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fragment_trainingsuebersicht_mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                map:srcCompat="@drawable/avatar_map" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/karte"
                android:textSize="14sp" />
        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_daten"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        map:cardCornerRadius="6dp"
        map:layout_constraintBottom_toTopOf="@+id/training_dialog_loeschen_button"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toEndOf="@+id/cardView_teilnehmer"
        map:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/textView_Ort"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/fragment_trainingsuebersicht_textView_trainingsort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:maxLines="2"
                android:text="@string/buga_potsdam"
                android:textColor="#1B1B1B"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/textView_platzkosten_2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/fragment_trainingsuebersicht_textView_platzkosten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_24_99_eur"
                android:textColor="#1B1B1B"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/training_dialog_loeschen_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/training_loeschen"
        android:textColor="@color/colorPrimary"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
