<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_spielername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-light"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editText_add_buchung"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/editText_buchungsbetrag"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_buchungsbetrag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789," />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/editText_EUR"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_add_buchung"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16.dp"
            android:layout_weight="0.5"
            android:text="@string/button_add_player" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="#AE1732"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/textView_buchung_datum"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="#AE1732"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/textView_buchung_betrag"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="#AE1732"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/textView_kto_saldo_neu"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />


    </LinearLayout>

    <ListView
        android:id="@+id/listView_buchungen"
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:divider="@null" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        app:itemBackground="@android:color/white"
        app:itemIconTint="@android:color/black"
        app:itemTextColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</LinearLayout>