<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SpielerseiteKontodatenFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="6dp">

        <TextView
            android:id="@+id/betrag_je_spieler2"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/editText_buchungsbetrag"
            android:textColor="#888888"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/fragment_kontodaten_editText_switch"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:text="@string/switch_auszahlung"
            android:textColor="#888888" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fragment_kontodaten_editText_addBuchung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="3"
                android:digits="01234567890,"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/betrag_0"
                android:importantForAutofill="no"
                android:inputType="number"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:textColor="#AE1732"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/spieltag_EUR_unten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_weight="0"
                android:fontFamily="sans-serif-light"
                android:text="@string/editText_EUR"
                android:textColor="#AE1732"
                android:textSize="24sp" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_spielerkonto_addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/icon_plus_white"
            app:fabSize="mini" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#AE1732"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_spielerseite_kontodaten_item_ueberschrift1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/textView_buchung_datum"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_spielerseite_kontodaten_item_ueberschrift2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:padding="5dp"
                    android:text="@string/textView_buchung_betrag"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_spielerseite_kontodaten_item_ueberschrift3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/textView_kto_saldo_neu"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_spielerseite_kontodaten_item_ueberschrift4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/textView_buchung_typ"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listView_buchungen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:divider="@null"
                android:nestedScrollingEnabled="false">

            </ListView>

            <ImageButton
                android:id="@+id/mehrBuchungen"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="@android:color/white"
                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                android:src="@drawable/icon_down_arrow" />

            <TextView
                android:id="@+id/mehrBuchungenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#888888" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>